Closed Bug 35598 Opened 25 years ago Closed 22 years ago

HTMLInputElement.click does not function

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: ckritzer, Unassigned)

Details

(Whiteboard: [nsbeta2+])

Attachments

(2 files)

Overview: When using HTMLInputElement.click() to simulate a mouse click on a checkbox or radio button, nothing appears to happen. Checkboxes, radiobuttons do not change states. Steps to Reproduce: 1) Launch Commercial builds of 0411xx on Linux, MacOS, and/or Win32 2) Load attached testcase Actual Results: Checkbox and radio buttons do not change checked states Expected Results: Checkbox and radio buttons should change checked states Platforms Tested/Bug Exists On: - Linux6 2000-04-11-09 Commercial - MacOS9 2000-04-11-09 Commercial - Win98 2000-04-11-09 Commercial
QA Contact set to self. Updated OS to 'All'.
OS: Windows 98 → All
QA Contact: gerardok → ckritzer
nominating for nsbeta2: severity, feature (DOM Level 1 Standards Compliance) broken
Keywords: nsbeta2
Putting on [nsbeta2-] radar. Unless you can give us a top 100 site with this problem.
Whiteboard: [nsbeta2-]
Per gerardo's mail, info below" removing nsbeta- for a re-eval by PDT "Yes, the HTMLInput.click() method would need to work on the feature complete build (beta2) if we want to claim that DOM is supported in NS 6. The Beta2 criteria states that: "DOM Level 0 (the DOM elements founds in Nav3/JavaScript 1.1) must be fully supported. Bugs in support for DOM0 should be carefully evaluated as possible beta 2 stoppers as they will affect many pages." The HTMLInput.click() was implemented in Navigator 2.0 --see Netscape Reference. Currently, the click() method is not working at all, no matter what data is used, in the simplest possible test scenario. I'm not ready to give you a top 100 site yet."
Whiteboard: [nsbeta2-]
Putting on [nsbeta2+] radar.
Whiteboard: [nsbeta2+]
The attached testcase is a bit broken, I'll attach an fixed version.
Status: NEW → ASSIGNED
Attached file Fixed testcase
Johnny, the test case you attached works fine on today's win32 build. Please check this out on Linux and, if it works there too, please mark this bug fixed. Thanks!
Thanks for testing Troy, I tested on Linux and looks good there too. Marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Marking VERIFED FIXED on: - MacOS9 2000-05-23-12-M16 Commercial Build - Linux6 2000-05-23-10-M16 Commercial Build - Win95 2000-05-23-10-M16 Commercial Build
Status: RESOLVED → VERIFIED
Marking VERIFED FIXED on: - MacOS9 2000-05-23-12-M16 Commercial Build - Linux6 2000-05-23-10-M16 Commercial Build - Win95 2000-05-23-10-M16 Commercial Build
Status: VERIFIED → CLOSED
I opened attachment 8335 [details] the second checkbox is not selected and the second radiobutton is selected where the testcase claims it should be the third. reopening the bug
Status: CLOSED → REOPENED
Resolution: FIXED → ---
Confirmed in 0.9.6. Wow how did that happen. The click() on the button works though.
Another case of this bug is INPUT TYPE=IMAGE, here is a test case: http://mozart.chat.net/~jeske/_drop/Mozilla/sample1.html
Mass-reassigning bugs to dom_bugs@netscape.com
Assignee: jst → dom_bugs
Status: REOPENED → NEW
I think this is also a problem with <input type="file">. I want to customize the look of a file upload box. Under IE, I can use a JavaScript function to do "document.form.filebox.click()", and it will open the Browse window. Under Mozilla, nothing whatsoever happens. On a related note, apparently the onChange isn't called when the information is updated via the browse button. If this isn't a related bug, please let me know so I can file a new one!
Phil, this was a generic bug. If there is a specific bug for a specific type of inputs, I'd say file that separately (although I suspect what you mentioned is not really a bug with .click() -- I imagine the click event is getting fired, but it is on the textbox portion, and not the button portion which is anonymous content...) Marking FIXED.
Status: NEW → RESOLVED
Closed: 25 years ago22 years ago
QA Contact: ckritzer → ian
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: