Fixing bug 35598, HTMLInputElement.click() wasn't working properly. r=joki